[package]
name = "kaioshin-client-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
# Kaioshin dependencies
kaioshin-runtime = {git = "https://github.com/keep-starknet-strange/kaioshin"}

# Substrate dependencies
frame-support = { git = "https://github.com/keep-starknet-strange/substrate.git", branch = "kaioshin-dev"  }
frame-system = { git = "https://github.com/keep-starknet-strange/substrate.git", branch = "kaioshin-dev"  }
sp-core = { features = ["full_crypto"], git = "https://github.com/keep-starknet-strange/substrate.git", branch = "kaioshin-dev"  }
sp-keyring = { git = "https://github.com/keep-starknet-strange/substrate.git", branch = "kaioshin-dev"  }
sp-runtime = { git = "https://github.com/keep-starknet-strange/substrate.git", branch = "kaioshin-dev"  }
sp-version = { git = "https://github.com/keep-starknet-strange/substrate.git", branch = "kaioshin-dev"  }
pallet-balances = { git = "https://github.com/keep-starknet-strange/substrate.git", branch = "kaioshin-dev"  }

# Third party dependencies
substrate-api-client = { git = "https://github.com/scs/substrate-api-client", features = ["tungstenite-client", "ws-client"] }
tokio = { version = "1.26.0", features = ["rt-multi-thread", "macros", "time"] }
codec = { package = "parity-scale-codec", version = "3.2", features = ['derive'] }
env_logger = "0.10.0"
log = { version = "0.4.14" }
serde_json = { version = "1.0.79" }